--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jsonwebtoken"
+name = "jsonwebtoken-test"
 version = "9.2.0"
 authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
 license = "MIT"
@@ -11,8 +11,6 @@ keywords = ["jwt", "api", "token", "jwk"]
 edition = "2021"
 include = [
     "src/**/*",
-    "benches/**/*",
-    "tests/**/*",
     "LICENSE",
     "README.md",
     "CHANGELOG.md",
@@ -25,35 +23,11 @@ serde = { version = "1.0", features = ["derive"] }
 base64 = "0.21.0"
 # For PEM decoding
 pem = { version = "3", optional = true }
-simple_asn1 = { version = "0.6", optional = true }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-ring = { version = "0.17.4", features = ["std"] }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3"
-ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"] }
-
-[dev-dependencies]
-wasm-bindgen-test = "0.3.1"
-
-[target.'cfg(not(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi")))))'.dev-dependencies]
-# For the custom time example
-time = "0.3"
-criterion = "0.4"
-
-[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
-# For the custom time example
-time = { version = "0.3", features = ["wasm-bindgen"] }
-criterion = { version = "0.4", default-features = false }
+ed25519-dalek = "1.0.1"
 
 [features]
 default = ["use_pem"]
-use_pem = ["pem", "simple_asn1"]
-
-[[bench]]
-name = "jwt"
-harness = false
+use_pem = ["pem"]
 
 [badges]
 maintenance = { status = "passively-maintained" }
