--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jsonwebtoken"
+name = "jsonwebtoken_wasm"
 version = "9.2.0"
 authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
 license = "MIT"
@@ -25,23 +25,24 @@ serde = { version = "1.0", features = ["derive"] }
 base64 = "0.21.0"
 # For PEM decoding
 pem = { version = "3", optional = true }
-ed25519-dalek = { version="2.1.1", optional = true }
+ed25519-dalek = { version = "1.0.1", optional = true }
 simple_asn1 = { version = "0.6", optional = true }
+getrandom = {version = "0.2", default-features = false, features = ["custom"]}
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-ring = { version = "0.17.4", features = ["std"] }
+ring = { version = "0.17.4", features = ["std"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3"
-ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"] }
+js-sys = {version = "0.3", optional = true }
+ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"], optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.1"
 
 [target.'cfg(not(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi")))))'.dev-dependencies]
 # For the custom time example
-time = "0.3"
-criterion = "0.4"
+time = { version = "0.3" } 
+criterion = { version = "0.4" }
 
 [target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
 # For the custom time example
@@ -49,8 +50,8 @@ time = { version = "0.3", features = ["wasm-bindgen"] }
 criterion = { version = "0.4", default-features = false }
 
 [features]
-default = ["use_pem"]
-use_pem = ["pem", "simple_asn1"]
+default = ["ptd", "pem"]
+use_pem = ["pem"]
 ptd = ["ed25519-dalek"]
 
 [[bench]]
