--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,9 @@ time = { version = "0.3", features = ["wasm-bindgen"] }
 criterion = { version = "0.4", default-features = false }
 
 [features]
-default = ["ptd", "pem"]
-use_pem = ["pem"]
-ptd = ["ed25519-dalek"]
+default = ["use_pem"]
+use_pem = ["pem", "simple_asn1", "ring"]
+ptd = ["ed25519-dalek", "pem"]
 
 [[bench]]
 name = "jwt"
