--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ time = { version = "0.3", features = ["wasm-bindgen"] }
 criterion = { version = "0.4", default-features = false }
 
 [features]
-default = ["use_pem"]
+default = ["ptd"]
 use_pem = ["pem", "simple_asn1", "ring"]
 ptd = ["ed25519-dalek", "pem"]
 
