--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ criterion = { version = "0.4", default-features = false }
 [features]
 default = ["use_pem"]
 use_pem = ["pem", "simple_asn1"]
-no_rand = ["use_pem", "ed25519-dalek"]
+no_rand = ["ed25519-dalek"]
 
 [[bench]]
 name = "jwt"
