--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,19 +22,19 @@ rust-version = "1.73.0"
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-base64 = "0.21.0"
+base64 = { version = "0.21.0"}
 # For PEM decoding
 pem = { version = "3", optional = true }
 simple_asn1 = { version = "0.6", optional = true }
 # For no_rand feature to replace ring
-ed25519-dalek = {version = "2.1.1", optional = true }
+ed25519-dalek = {version = "2.1.1", optional = true, default-features = false}
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-ring = { version = "0.17.4", features = ["std"] }
+#ring = { version = "0.17.4", features = ["std"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3"
-ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"], optional = true }
+#ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"], optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.1"
